@startuml

  entity User <<ENTITY>> {
    email:TEXT
    nickname:TEXT
    password:TEXT
    confirmation:BOOLEAN
    
    activationKey: GUID <<Nullable>>
  }
  
  entity Review <<ENTITY>>{
    topic:TEXT
    text:TEXT
    creationdate:DATE
  }
 
  entity Role <<ENTITY>>{
    name
    permissions:ENUM
  }
  
  
  
  
  entity Action <<ENTITY>> {
    type: TEXT
    actedAt : Date
  }

  
  
  entity Dataset <<ENTITY>> {
  }
  
  entity Metadata <<ENTITY>> {
    key
    value
  }
  
  
  entity Conception <<ENTITY>> {
  }
  
  entity Datapoint <<ENTITY>> {
    tableName // ref to data table
  }
  
  entity Entities <<ENTITY>> {
    tableName // ref to data table
  }
  
   Metadata "0,*" -u- "1,1" Dataset
    
    User "1,1" -l- "0,*" Review : Author

  
    User "1,1" -r- "0,*" Action
    
    User "0,*" --  "1,1" Role
        
    
    Action "0,*" -r- "0,1" Metadata
    Action "0,*" -r- "0,1" Dataset
    Action "0,*" -- "0,1" Entities
    Action "0,*" -- "0,1" Conception
    
    
    Dataset "1,1" -- "0,*" Datapoint
    
    Datapoint "0,*" -u- "1,1" Entities
    
    Datapoint "1,1" -l- "0,*" Conception
    
    Dataset "1,1" -- "0,*" Conception
    
    
  
@enduml
